# latin-word-lookup

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  tauri.conf.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: changelog.yml  ci.yml  docs.yml  pr-labeler.yml  release.yml  security.yml
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_api.rs  config.rs  lib.rs  main.rs  tests.rs
src-tauri/tests/: integration_tests.rs
